<resources>
    <string name="app_name">Easy Task</string>

    <string name="hint_password">Password</string>
    <string name="hint_userId">Email</string>
    <string name="btn_login">Log In</string>
    <string name="forgot_password">Forgot your login detail?</string>
    <string name="get_help_signing">Get help signing in</string>
    <string name="error_no_internet">No Internet!</string>
    <string name="error_no_internet_msg">Sorry there is no network connection.Please check your network connection.</string>

    <string name="or">OR</string>
    <string name="signup">Sign up</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="user_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_signup">Sign up</string>
    <string name="login">Log In</string>

    <string name="empty_user_name_title">Empty UserName!</string>
    <string name="empty_user_name_msg">UserName cannot be empty</string>

    <!--    <string name="empty_email_title">Empty Email!</string>-->
    <!--    <string name="empty_email_msg">Email cannot be empty</string>-->
    <!--    <string name="empty_password_title">Empty Password!</string>-->
    <!--    <string name="empty_password_msg">Password cannot be empty</string>-->
    <!--    <string name="empty_confirm_password_title">Empty Confirm Password!</string>-->
    <!--    <string name="empty_confirm_password_msg">Confirm password cannot be empty</string>-->

    <string name="error_confirm_password_title">Password Not Matched!</string>
    <string name="error_confirm_password_msg">Confirm password does not match.</string>
    <string name="email_validator_title">Wrong Email</string>
    <string name="validation_email_failed">Please check your email address</string>
    <string name="password_validator_title">Weak Password!</string>
    <string name="validation_password_failed">Password must be at least 4 characters!</string>
    <string name="validation_confirm_password_title">Mismatch!</string>
    <string name="validation_confirm_password_failed">Password didn\'t match!</string>


    <string name="navigation_home">Home</string>
    <string name="navigation_add_task">Add Task</string>
    <string name="navigation_profile">Profile</string>
    <string name="task_title">Title</string>
    <string name="task_body">Body</string>

    <string name="btn_ok">OK</string>
    <string name="title_success_dialog">Success!</string>
    <string name="title_un_successful_dialog">UnSuccessful!</string>
    <string name="title_successful_signup">Great!</string>
    <string name="title_error_dialog">Error!</string>
    <string name="msg_add_post_success">Task added successfully.</string>
    <string name="msg_add_post_un_successful">Sorry! Something went wrong. Please try again.</string>
    <string name="msg_signup_successful">Hurry! you have created a new account. Please login</string>
    <string name="alert_error_title">Ouch!</string>
    <string name="alert_error_msg">There was a error please try again.</string>
    <string name="alert_success_title">Great!</string>
    <string name="alert_edit_success_msg">Successfully updated</string>
    <string name="todo">content description</string>
    <string name="profile_post">Posts</string>
    <string name="profile_follower">Follower</string>
    <string name="profile_following">Following</string>
    <string name="zero">0</string>
    <string name="edit_menu_item">Edit</string>
    <string name="hint_name">Name</string>
    <string name="hint_bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="email_field_hint">Email</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>

    <string name="success_sign_up_title">Congratulations !</string>
    <string name="success_sign_up_msg">Registration Successful. Please Login.</string>
    <string name="error_sign_up_title">Sorry!</string>
    <string name="error_sign_up_msg">Registration Failed. Please Try Again!</string>


    <string-array name="task_status_list">
        <item>PENDING</item>
        <item>STARTED</item>
        <item>COMPLETED</item>
    </string-array>


    <string name="error_code_400">The server could not understand the request due to invalid syntax.</string>
    <string name="error_code_401">Unauthorized! Please login.</string>
    <string name="error_code_404">The server can not find the requested resource.</string>
    <string name="error_code_500">The server has encountered a situation it doesn\'t know how to handle.</string>

    <string name="alert_delete_title">Warning!</string>
    <string name="alert_delete_msg">Do you want to delete?</string>
    <string name="alert_delete_success">Successfully Deleted!</string>
    <string name="alert_delete_error">Deleting Failed !</string>

    <!-- App mode dialog -->

    <string name="select_mode">Select App Theme Mode</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System</string>
    <string name="battery_mode">Battery</string>
    <string name="app_mode">App Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
