<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_base"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shajt3ch.todomvvm.view.ui.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_taskFragment"
            app:destination="@id/navigation_add_task" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_task"
        android:name="com.shajt3ch.todomvvm.view.ui.task.TaskFragment"
        android:label="@string/navigation_add_task"
        tools:layout="@layout/task_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.shajt3ch.todomvvm.view.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>